grammar.js
		caddyfile: $ =>
			seq(
				repeat($._eol),
				optional(seq($.global_options, repeat($._eol))),
				optional(choice($.single_site, $.multi_site)),
			),

		single_site: $ => seq($._site, repeat1($._eol), optional($._block_body)),

		_site: $ => choice($._site_field, $._site_list),

		_bare_identifier: $ => alias($._ext_str_bare, $.identifier),

		identifier: $ => choice($.templated_identifier, $._ext_str_bare),

		literal_string: $ => $._ext_str_bare,

		_fragment: $ => prec.right(seq($._sym_num, optional($.string))),

		address: $ =>
			prec.right(
				seq(
					optional(field('scheme', seq($.string, $._sym_scheme))),
					optional(seq(field('user', $.string), $._sym_at)),
					$.authority,
					optional(field('path', $.path)),
					optional(field('query', $.query)),
					optional(field('fragment', $._fragment)),
				),
			),

		authority: $ =>
			prec.right(repeat1(choice(field('host', $.host), field('port', $._port)))),

		_port: $ => prec.right(seq($._sym_colon, optional(choice($.range, $._primitive)))),

		domain_name: $ =>
			prec.right(
				seq(
					field('segment', $.string),
					repeat(choice(field('segment', $.string), $._sym_period)),
				),
			),

		mapping: $ =>
			prec.right(
				seq(
					optional(field('key', $._bare_identifier)),
					repeat1(seq($._sym_equal, optional(field('value', $._bare_identifier)))),
				),
			),
		query: $ =>
			prec.right(
				seq(
					$._sym_question,
					optional($.mapping),
					repeat(seq($._sym_ampersand, $.mapping)),
				),
			),
		_block_body: $ =>
			seq($._expression, repeat(seq(repeat1($._eol), $._expression)), repeat1($._eol)),

		_posix_path: $ =>
			prec.right(
				seq($._sym_solidus, repeat(choice($._sym_solidus, field('segment', $.string)))),
			),

		path: $ => $._posix_path,

		matcher: $ => prec.right(choice($.wildcard, $.named_matcher_reference, $.path)),
		directive: $ => field('name', $._bare_identifier),
		conditional_directive: $ => seq($.directive, repeat1($._ws), $._matcher_field),
		statement: $ =>
			prec.left(
				seq(
					choice($.directive, $.conditional_directive),
					repeat(seq(repeat1($._ws), $._arguments_field)),
					optional(seq(repeat1($._ws), $.block)),
				),
			),

		_matcher_field: $ =>
			seq(optional(field('modifier', $.not_operator)), field('matcher', $.matcher)),
		_arguments_field: $ => field('argument', $.argument),
		_sym_at: $ => alias($._ext_sym_at, '@'),
		_sym_period: $ => alias($._ext_sym_period, '.'),
		_sym_ampersand: $ => alias($._ext_sym_ampersand, '&'),
		_sym_question: $ => alias($._ext_sym_question, '?'),
		_sym_equal: $ => alias($._ext_sym_equal, '='),

		_sym_scheme: $ => alias($._ext_sym_scheme, '://'),

		_ws: $ => $._ext_ws,
		_eol: $ => choice($.comment, $._ext_eol),
