test/corpus/addresses.txt
====================
Addresses
====================
example.com

reverse_proxy /path/subpath
reverse_proxy /path/subpath#fragment
reverse_proxy /path/subpath?key=value&foo=bar
reverse_proxy /path/subpath?key=value&foo=bar#fragment
reverse_proxy https://subdomain.domain.tld
reverse_proxy https://subdomain.domain.tld#fragment
reverse_proxy https://subdomain.domain.tld/path/subpath
reverse_proxy https://subdomain.domain.tld/path/subpath#fragment
reverse_proxy https://subdomain.domain.tld/path/subpath?key=value&foo=bar
reverse_proxy https://subdomain.domain.tld/path/subpath?key=value&foo=bar#fragment
reverse_proxy https://subdomain.domain.tld:port
reverse_proxy https://subdomain.domain.tld:port#fragment
reverse_proxy https://subdomain.domain.tld:port/path/subpath
reverse_proxy https://subdomain.domain.tld:port/path/subpath#fragment
reverse_proxy https://subdomain.domain.tld:port/path/subpath?key=value&foo=bar
reverse_proxy https://subdomain.domain.tld:port/path/subpath?key=value&foo=bar#fragment
reverse_proxy https://subdomain.domain.tld:port?key=value&foo=bar
reverse_proxy https://subdomain.domain.tld:port?key=value&foo=bar#fragment
reverse_proxy https://subdomain.domain.tld?key=value&foo=bar
reverse_proxy https://subdomain.domain.tld?key=value&foo=bar#fragment
reverse_proxy https://user@subdomain.domain.tld
reverse_proxy https://user@subdomain.domain.tld#fragment
reverse_proxy https://user@subdomain.domain.tld/path/subpath
reverse_proxy https://user@subdomain.domain.tld/path/subpath#fragment
reverse_proxy https://user@subdomain.domain.tld/path/subpath?key=value&foo=bar
reverse_proxy https://user@subdomain.domain.tld/path/subpath?key=value&foo=bar#fragment
reverse_proxy https://user@subdomain.domain.tld:port
reverse_proxy https://user@subdomain.domain.tld:port#fragment
reverse_proxy https://user@subdomain.domain.tld:port/path/subpath
reverse_proxy https://user@subdomain.domain.tld:port/path/subpath#fragment
reverse_proxy https://user@subdomain.domain.tld:port/path/subpath?key=value&foo=bar
reverse_proxy https://user@subdomain.domain.tld:port/path/subpath?key=value&foo=bar#fragment
reverse_proxy https://user@subdomain.domain.tld:port?key=value&foo=bar
reverse_proxy https://user@subdomain.domain.tld:port?key=value&foo=bar#fragment
reverse_proxy https://user@subdomain.domain.tld?key=value&foo=bar
reverse_proxy https://user@subdomain.domain.tld?key=value&foo=bar#fragment
reverse_proxy subdomain.domain.tld
reverse_proxy subdomain.domain.tld#fragment
reverse_proxy subdomain.domain.tld/path/subpath
reverse_proxy subdomain.domain.tld/path/subpath#fragment
reverse_proxy subdomain.domain.tld/path/subpath?key=value&foo=bar
reverse_proxy subdomain.domain.tld/path/subpath?key=value&foo=bar#fragment
reverse_proxy subdomain.domain.tld:port
reverse_proxy subdomain.domain.tld:port#fragment
reverse_proxy subdomain.domain.tld:port/path/subpath
reverse_proxy subdomain.domain.tld:port/path/subpath#fragment
reverse_proxy subdomain.domain.tld:port/path/subpath?key=value&foo=bar
reverse_proxy subdomain.domain.tld:port/path/subpath?key=value&foo=bar#fragment
reverse_proxy subdomain.domain.tld:port?key=value&foo=bar
reverse_proxy subdomain.domain.tld:port?key=value&foo=bar#fragment
reverse_proxy subdomain.domain.tld?key=value&foo=bar
reverse_proxy subdomain.domain.tld?key=value&foo=bar#fragment
reverse_proxy user@subdomain.domain.tld
reverse_proxy user@subdomain.domain.tld#fragment
reverse_proxy user@subdomain.domain.tld/path/subpath
reverse_proxy user@subdomain.domain.tld/path/subpath#fragment
reverse_proxy user@subdomain.domain.tld/path/subpath?key=value&foo=bar
reverse_proxy user@subdomain.domain.tld/path/subpath?key=value&foo=bar#fragment
reverse_proxy user@subdomain.domain.tld:port
reverse_proxy user@subdomain.domain.tld:port#fragment
reverse_proxy user@subdomain.domain.tld:port/path/subpath
reverse_proxy user@subdomain.domain.tld:port/path/subpath#fragment
reverse_proxy user@subdomain.domain.tld:port/path/subpath?key=value&foo=bar
reverse_proxy user@subdomain.domain.tld:port/path/subpath?key=value&foo=bar#fragment
reverse_proxy user@subdomain.domain.tld:port?key=value&foo=bar
reverse_proxy user@subdomain.domain.tld:port?key=value&foo=bar#fragment
reverse_proxy user@subdomain.domain.tld?key=value&foo=bar
reverse_proxy user@subdomain.domain.tld?key=value&foo=bar#fragment

---

(caddyfile
  (single_site
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string))))
    (statement
      (conditional_directive
        (directive
          (identifier))
        (matcher
          (path
            (literal_string)
            (literal_string)))))
    (statement
      (conditional_directive
        (directive
          (identifier))
        (matcher
          (path
            (literal_string)
            (literal_string)
            (literal_string)))))
    (statement
      (conditional_directive
        (directive
          (identifier))
        (matcher
          (path
            (literal_string)
            (literal_string)
            (literal_string)))))
    (statement
      (conditional_directive
        (directive
          (identifier))
        (matcher
          (path
            (literal_string)
            (literal_string)
            (literal_string)
            (literal_string)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (path
          (literal_string)
          (literal_string))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (path
          (literal_string)
          (literal_string))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (path
          (literal_string)
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (path
          (literal_string)
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (path
          (literal_string)
          (literal_string))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (path
          (literal_string)
          (literal_string))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (path
          (literal_string)
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (path
          (literal_string)
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (path
          (literal_string)
          (literal_string))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (path
          (literal_string)
          (literal_string))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (path
          (literal_string)
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (path
          (literal_string)
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (path
          (literal_string)
          (literal_string))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (path
          (literal_string)
          (literal_string))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (path
          (literal_string)
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (path
          (literal_string)
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (path
          (literal_string)
          (literal_string))))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (path
          (literal_string)
          (literal_string))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (path
          (literal_string)
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (path
          (literal_string)
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (path
          (literal_string)
          (literal_string))))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (path
          (literal_string)
          (literal_string))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (path
          (literal_string)
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (path
          (literal_string)
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (path
          (literal_string)
          (literal_string))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (path
          (literal_string)
          (literal_string))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (path
          (literal_string)
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (path
          (literal_string)
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (path
          (literal_string)
          (literal_string))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (path
          (literal_string)
          (literal_string))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (path
          (literal_string)
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (path
          (literal_string)
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string))
          (literal_string))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))
        (literal_string)))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)))
        (query
          (mapping
            (identifier)
            (identifier))
          (mapping
            (identifier)
            (identifier)))
        (literal_string)))))
